--- a/code/frontend/hotix/package.json
+++ b/code/frontend/hotix/package.json
@@ -28,6 +28,7 @@
     "datepicker": "^0.0.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "framer-motion": "^10.12.18",
     "react": "^18.2.0",
     "react-credit-cards-2": "^0.10.0",
     "react-datepicker": "^4.10.0",
